replicate exclusive ehacache to master and BB builds